--- a/styles/style.css
+++ b/styles/style.css
@@ -3,3 +3,65 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#carousel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+#carousel .img-container {
+    height: 80vh;
+    padding: 20px;
+    display: none;
+}
+
+#carousel .img-container.first-img {
+    display: block;
+}
+
+#carousel .img-container img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+#carousel .button-left,
+#carousel .button-right {
+    font-size: 40px;
+    background: none;
+    color: darkblue;
+}
+
+.controller {
+    position: absolute;
+    bottom: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 12px 20px;
+    border-radius: 30px;
+    background-color: rgba(0, 0, 0, .6)
+}
+
+.controller .controller-dots-list {
+    margin: 0;
+    padding: 0;
+}
+
+.controller .controller-dots-list .controller-dots {
+    display: inline-block;
+    list-style: none;
+    height: 10px;
+    width: 10px;
+    margin: 0 10px;
+    background: white;
+    border-radius: 50%;
+    cursor: pointer;
+}
