--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+/* Utilities */
+
+
+
+/* Styles */
+
 body {
     height: 100vh;
     display: flex;
@@ -24,7 +30,7 @@ body {
     display: none;
 }
 
-#carousel .img-container.first-img {
+#carousel .img-container.show {
     display: block;
 }
 
